# forbidden

./: CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: codeql.yaml  python-app-v2.yml  python-app.yml
src/forbidden/: forbidden.py  main.py  user_agents.txt
src/forbidden/utils/: array.py  config.py  crypto.py  encode.py  file.py  forbidden.py  general.py  header.py  ip.py  path.py  record.py  report.py  test.py  url.py  validate.py  value.py
src/stresser/: main.py  stresser.py
src/stresser/utils/: config.py  cookie.py  directory.py  encode.py  file.py  general.py  grep.py  header.py  path.py  record.py  report.py  stresser.py  url.py  validate.py
